# python-for-analytics

./: .flake8  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  Makefile  README.md  SETUP.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
conf/base/: catalog.yml
src/online_retail_analytics/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/online_retail_analytics/pipelines/data_processing/: nodes.py  pipeline.py
tests/: conftest.py
tests/integration/: test_pipelines.py
tests/unit/: test_sample.py
